# vertiv-pdu-automation

./: .env.example  .gitignore  README.md  Vertiv.py  nr_conf_pdu.py  nr_upgrade_pdu.py  pyproject.toml
