[project]
name = "pdu-config-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Rait Prits",email = "rprits@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "pdu_config_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nornir = "^3.5.0"
requests = "^2.28.0"
python-dotenv = "^0.19.0"
pyyaml = "^6.0"
nornir-utils = "^0.2.0"
httpx = "^0.28.1"
pandas = "^2.3.2"
pynetbox = "^7.5.0"
nornir-netbox = "^0.3.0"
bpython = "^0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"